Fix url bar not centered #46

--- a/theme/parts/headerbar-urlbar.css
+++ b/theme/parts/headerbar-urlbar.css
@@ -3,8 +3,8 @@
 @namespace xul "http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul";
 
 #urlbar {
-	--urlbar-height: 34.00px;
-	--urlbar-toolbar-height: 34.00px !important;
+	--urlbar-height: 28.00px;
+	--urlbar-toolbar-height: 28.00px !important;
 }
 
 /* Center the URL bar */
@@ -34,8 +34,8 @@ toolbarspring {
 	max-height: unset !important;
 }
 #urlbar[breakout][breakout-extend] #urlbar-input-container {
-	height: 32px !important;
-	max-height: 32px !important;
+	height: 30px !important;
+	max-height: 30px !important;
 	padding: 0 !important;
 }
 
@@ -91,8 +91,8 @@ toolbarspring {
 	border-left-width: 0 !important;
 	border-bottom-color: var(sweet-button-border-accent-color) !important;
 	padding: 0 2px !important;
-	min-height: 34px !important;
-	min-width: 34px !important;
+	min-height: 30px !important;
+	min-width: 30px !important;
 	margin: 0 !important;
 }
 .searchbar-engine-one-off-item:hover, .searchbar-engine-one-off-item[selected] {
